--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-native": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "sass": "^1.49.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
