--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-lazy-load-image-component": "^1.5.4",
     "react-router": "^6.0.2",
     "react-router-dom": "^5.2.0",
     "react-router-native": "^6.0.2",
